# ctfbot

./: .claudeignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  ctfbot-rewrite-design.md  pyproject.toml
.claude/: settings.json
.claude/agents/: arch-check.md  codex-review.md
.claude/rules/: db-constraints.md  feature-isolation.md
.claude/skills/design-spec/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml
ctfbot-rust/: .gitignore  Cargo.toml  README.md
ctfbot-rust/src/: database.rs  handler.rs  main.rs  models.rs  tasks.rs
ctfbot-rust/src/commands/: alpacahack.rs  ctftime.rs  general.rs  help.rs  mod.rs  role.rs
ctfbot-rust/src/services/: alpacahack_service.rs  ctftime_service.rs  mod.rs
docs/: DEVELOPMENT_GUIDE.md  LEGACY_DB_MIGRATION.md  ci.md  core.md  data-contracts.md  design-review-2026-07-06.md  design.md
docs/features/: alpacahack.md  audit-log.md  ctf-team.md  ctftime.md  sudo.md  times.md  utility.md
docs/tasks/: 2026-07-06-design-review-fixes.md  2026-07-17-docs-review.md  2026-07-18-phase1-reliability.md  2026-07-18-phase2-authorization.md  2026-07-18-phase3-limits-and-display.md  2026-07-19-phase1-alpaca-add-atomic-limit.md
scripts/: migrate_ctf_team_db.py
src/: main.py
src/bot/: __init__.py  app.py  cogs_loader.py  command_audit.py  config.py  db.py  discord_gateway.py  errors.py  helpers.py  log.py  runtime.py  runtime_providers.py
src/bot/application/: __init__.py  alpacahack.py  ctftime.py
src/bot/cogs/: _runtime.py  alpacahack.py  basic_commands.py  ctf_management.py  ctftime_notifications.py  help_command.py  manage_cogs.py  message_tools.py  perms_debug.py  slash_commands.py  sleep_commands.py  tasks_loop.py  times_channels.py
src/bot/cogs/examples/: basic_commands.py  slash_commands.py  tasks_loop.py
src/bot/db/: connection.py  database.py  migrations.py
src/bot/features/: __init__.py  alpacahack.py  audit_log.py  ctftime.py  times.py  utility.py
src/bot/features/alpacahack/: __init__.py  cog.py  models.py  repository.py  service.py  usecase.py
src/bot/features/ctf_roles/: archive_flow.py  cog.py  models.py  open_create_flow.py  repository.py  service.py  start_close_flow.py  usecase.py
src/bot/features/ctf_team/: archive_flow.py  campaign.py  cog.py  discord_ops.py  models.py  open_create_flow.py  repository.py  service.py  start_close_flow.py  usecase.py
src/bot/features/ctftime/: __init__.py  cog.py  models.py  service.py  usecase.py
src/bot/features/sudo/: cog.py  models.py
src/bot/integrations/: __init__.py  alpacahack_scraper.py  ctftime_api.py
src/bot/services/: alpacahack_service.py  ctftime_service.py
src/bot/utils/: helpers.py  sleep_graphs.py
src/ctfbot/: __init__.py  main.py
src/ctfbot/bot/: __init__.py  cogs_loader.py
src/ctfbot/bot/cogs/: basic_commands.py  manage_cogs.py  tasks_loop.py
src/ctfbot/cogs/: misc.py
tests/: test_alpacahack.py  test_app.py  test_architecture.py  test_audit_log.py  test_bot.py  test_campaign.py  test_cogs.py  test_cogs_loader.py  test_command_audit.py  test_config.py  test_ctf_roles.py  test_ctf_team.py  test_ctf_team_archive.py  test_ctf_team_close.py  test_ctf_team_cog.py  test_ctf_team_list.py  test_ctf_team_open.py  test_ctftime_api.py  test_ctftime_client.py  test_db.py  test_discord_ops.py  test_extensions.py  test_helpers.py  test_runtime.py  test_slash_commands.py  test_sudo.py  test_times.py  test_utility.py
