[project]
name = "ctfbot"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14",
    "discord-py>=2.7",
    "python-dotenv>=1.2",
    "requests>=2.32",
]

[project.scripts]
ctfbot = "bot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[dependency-groups]
dev = ["ruff>=0.15", "ty>=0.0.22"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.ty.environment]
root = ["./src"]
python = "./.venv"
python-version = "3.14"
