[package]
name = "ctfbot-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
serenity = "0.12.4"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "time", "net"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
regex = "1.10.5"
reqwest = { version = "0.12.21", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.41"
rusqlite = { version = "0.36.0", features = ["bundled"] }
scraper = "0.23.1"
